--- a/gleam.toml
+++ b/gleam.toml
@@ -5,7 +5,7 @@ description = "A pretty_printer for the glance AST"
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
 #
-# licences = ["Apache-2.0"]
+licences = ["Apache-2.0"]
 repository = { type = "github", user = "bcpeinhardt", repo = "glance_printer" }
 # links = [{ title = "Website", href = "https://gleam.run" }]
 
