update for gleam 0.32

--- a/gleam.toml
+++ b/gleam.toml
@@ -1,6 +1,7 @@
 name = "glance_printer"
-version = "0.1.0"
+version = "1.0.0"
 description = "A pretty_printer for the glance AST"
+gleam = ">= 0.32.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -10,12 +11,10 @@ repository = { type = "github", user = "bcpeinhardt", repo = "glance_printer" }
 # links = [{ title = "Website", href = "https://gleam.run" }]
 
 [dependencies]
-gleam_stdlib = "~> 0.30"
-glance = "~> 0.6"
+gleam_stdlib = "~> 0.32"
+glance = "~> 0.8.1"
 glam = "~> 1.0"
 
 [dev-dependencies]
-gleeunit = "~> 0.10"
-simplifile = "~> 0.1"
-testbldr = "~> 0.1"
-gap = "~> 0.7"
+simplifile = "~> 1.1.1"
+testbldr = "~> 1.0.0"
